# k8s_pod_depoly

./: .gitignore  podd.py  pyproject.toml  setup.py
src/: podd.py
