[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.1"
name = "podd"

requires-python = ">=3.6"

dependencies = [
]

[tool.setuptools.packages.find]
include = ["src"]

[project.scripts]
podd="src.podd:cli"
plist="src.podd:get_pods_list"
jlist="src.podd:get_jobs_list"
pnum="src.podd:get_pods_num"
jnum="src.podd:get_jobs_num"
lpod="src.podd:logs_pod"
apod="src.podd:attach_pod"
dpod="src.podd:delete_pod"
ngpu="src.podd:get_gpu_usage"